--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCUMENT html>
 <html>
 <head>
-    <script src="./app/string.js"></script>
+    <script src="./app/class.js"></script>
 </head>
 
 <body>
